-------------------------------------------------
GearSwap 0.833 - Added the first version of a more authentic filter.
-------------------------------------------------
GearSwap 0.832 - Adapted GearSwap for the .lua version of resources lib.
-------------------------------------------------
GearSwap 0.830 - Fixed various bugs. Differentiated pretarget and precast delays. Augments work again.
-------------------------------------------------
GearSwap 0.823 - Changed GearSwap to run off the resources library. Fixed Double-Up's aftercast.
-------------------------------------------------
GearSwap 0.822 - Added demomode and filters to prevent impossible actions. 
-------------------------------------------------
GearSwap 0.821 - Finalized register_event(). Protected user files to prevent error propagation.
-------------------------------------------------
GearSwap 0.820 - Added 0x02, 0x35 extdata augment handling. Added sub_job_change(new,old) event.
-------------------------------------------------
GearSwap 0.819 - API adjustments. Massive refactoring of the scheduler, which improved midaction() and pet_midaction(). Fixed " <wait X>" macros and the buff_change() event.
-------------------------------------------------
GearSwap 0.818 - Added pet_change() user event. Refined event registration.
-------------------------------------------------
GearSwap 0.817 - Added filtering to //gs validate. Added pet_midcast() user function.
-------------------------------------------------
GearSwap 0.816 - Automaton midcast fixed. //gs fixed. //gs export no longer requires a user file (except for the sets option).
-------------------------------------------------
GearSwap 0.815 - Automaton information added. 
-------------------------------------------------
GearSwap 0.814 - Fixed the equipment table, which was being unreliable.
-------------------------------------------------